// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`game logic characterization > chest availability — 'all medallions with mire bombos and t…' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'bombos only against ether and quake g…' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'boots and sword' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'dark world entry via glove and hammer' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "possible",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "possible",
  "available",
  "available",
  "possible",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'desert access' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "available",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "possible",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'everything except the bow' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'everything' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'everything, medallions unknown' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'flute, titans mitt and mirror' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "available",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "possible",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'fresh start' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'hera access' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'moonpearl alone' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'post agahnim with hookshot' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "possible",
  "possible",
  "possible",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'swamp palace down to two chests' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "possible",
  "available",
]
`;

exports[`game logic characterization > chest availability — 'titans mitt and moonpearl' 1`] = `
[
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "unavailable",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
  "available",
  "unavailable",
  "available",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "possible",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "possible",
  "unavailable",
  "available",
  "possible",
  "unavailable",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "available",
]
`;

exports[`game logic characterization > dungeon beatable — 'all medallions with mire bombos and t…' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'bombos only against ether and quake g…' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'boots and sword' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'dark world entry via glove and hammer' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "available",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'desert access' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "possible",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'everything except the bow' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "available",
    "available",
    "unavailable",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'everything' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'everything, medallions unknown' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'flute, titans mitt and mirror' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "possible",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'fresh start' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'hera access' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'moonpearl alone' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'post agahnim with hookshot' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "available",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'swamp palace down to two chests' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
    "available",
  ],
}
`;

exports[`game logic characterization > dungeon beatable — 'titans mitt and moonpearl' 1`] = `
{
  "withBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
  "withoutBigKeys": [
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "unavailable",
    "available",
    "unavailable",
    "unavailable",
    "unavailable",
  ],
}
`;

exports[`game logic characterization > dungeon chest access — 'all medallions with mire bombos and t…' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
]
`;

exports[`game logic characterization > dungeon chest access — 'bombos only against ether and quake g…' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'boots and sword' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'dark world entry via glove and hammer' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "possible",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'desert access' 1`] = `
[
  "possible",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'everything except the bow' 1`] = `
[
  "possible",
  "available",
  "available",
  "possible",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
]
`;

exports[`game logic characterization > dungeon chest access — 'everything' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
]
`;

exports[`game logic characterization > dungeon chest access — 'everything, medallions unknown' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
]
`;

exports[`game logic characterization > dungeon chest access — 'flute, titans mitt and mirror' 1`] = `
[
  "possible",
  "possible",
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'fresh start' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'hera access' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'moonpearl alone' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'post agahnim with hookshot' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "possible",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;

exports[`game logic characterization > dungeon chest access — 'swamp palace down to two chests' 1`] = `
[
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
  "available",
]
`;

exports[`game logic characterization > dungeon chest access — 'titans mitt and moonpearl' 1`] = `
[
  "possible",
  "unavailable",
  "unavailable",
  "unavailable",
  "unavailable",
  "possible",
  "available",
  "unavailable",
  "unavailable",
  "unavailable",
]
`;
